fixed spacing and added responsiveness to contact form and user-profile

--- a/style/configs.css
+++ b/style/configs.css
@@ -18,8 +18,10 @@ body{
     margin: 0;
     overflow: scroll;
 }
-#tab-content{
-    padding: 24px 75px;
+
+html, body {
+    height: 100%;
+    position: relative;
 }
 
 .material-symbols-outlined {
@@ -28,4 +30,22 @@ body{
         'wght' 400,
         'GRAD' 0,
         'opsz' 24
+}
+
+#tab-content{
+    padding: 24px 75px;
+}
+
+@media only screen and (max-width: 600px) {
+    #tab-content{
+        padding: 24px 12px 300px 12px;
+
+    }
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
